1998-12-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* mahjongg.c (create_mahjongg_board): Use gtk_widget_set_usize()
	instead of gnome_canvas_set_size().

1998-11-19  Francisco Bustamante <pancho@nuclecu.unam.mx>
	* mahjongg.c: Changing the map works now. Memory leaking is
	greatly reduced because images are destroyed after use. Changed
	gnome_dialog_set_modal (or whatever) to
	gtk_window_set_modal. Changing the tile images works
	too. Compiling warnings are gone. Most warnings during the game
	are gone too. Upped version to 0.99.1
	
1998-11-15  Francisco Bustamante <pancho@nuclecu.unam.mx>
	* mahjongg.c: All the tile drawing is now done by
	gnome-canvas. The code is somewhat cleaner, and the redraws are
	definitely better. TODO: make changing map and changing tile
	images work. When you use gnome_canvas_item_set to change the
	image, do we need to destroy the old image? Version 0.99.0
	* default.png: Someone did something to the transparent parts of
	the image, so I put them again. This is to make tiles nicer.
	
1998-11-01  Yo Ric Dude  <ricdude@ix.netcom.com>

	* mahjongg.c: Calculate x and y offsets to place tiles in the
	center of the playfield (AREA_WIDTH x AREA_HEIGHT).  Calculate new 
	values every time the map changes.

1998-26-28  Erik Troan  <ewt@redhat.com>

	* mahjongg.c: use gnome_color_picker instead of gnome_color_selector

1998-10-18  Tuomas Kuosmanen  <tigert@gimp.org>

	* added gnome-mahjongg.png: mahjongg icon
	* Makefile.am mahjongg.desktop: Added the icon to the .desktop -file

Tue Sep  8 21:44:03 CDT 1998
	* default.xpm seta.xpm: Changed the images for png's for space reasons
Tue Aug 25 17:45:00 BST 1998 Michael Meeks <michael@imaginator.com>
	* mahjongg.c (load_callback): Fixed bug with duff pointers being
	retained after being freed.
	* mahjongg.c (set_backgnd_colour): (load_callback):
	(colour_changes_cb): (properties_callback):
	(create_mahjongg_board):
	Background colour setting, major mangle / creation of all these.