@@ -1,3 +1,7 @@
+1998-12-16  Jonathan Blandford  <jrb@redhat.com>
+
+	* mahjongg.c (main): now use the new toolbar code.
+
 1998-12-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* mahjongg.c (create_mahjongg_board): Use gtk_widget_set_usize()
